add skills to profile

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,3 +15,10 @@
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "variables";
+@import "mixins";
+
+body {
+  background: rgb(235, 238, 243);
+  // padding-top: 70px;
+}
