--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -7,7 +7,7 @@
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-      = link_to 'GEEKHUB.IO', root_path, class: 'navbar-brand'
+      = link_to 'GEEKHUB.IO', root_path, class: 'navbar-brand', id: "brand"
     .collapse.navbar-collapse
       %ul.nav.navbar-nav
         %li= link_to 'GEEKs', profiles_path
