--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -1,6 +1,6 @@
 %p#notice= notice
 
 
-= link_to 'Edit', edit_profile_path(@profile)
+= link_to 'Edit', profile_edit_path(@profile)
 \|
 = link_to 'Back', profiles_path
