create skill add form with jquery

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,5 +1,5 @@
 !!!
-%html
+%html{"ng-app" => "app"}
   %head
     %title= "#{content_for?(:title) ? yield(:title) : 'Rails Devise'} - GEEKHUB.IO" 
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
