--- a/app/views/profiles/_add_skill_form.html.haml
+++ b/app/views/profiles/_add_skill_form.html.haml
@@ -1,4 +1,4 @@
-= form_tag(addskill_path, method: 'get', class: 'form-class', role: 'form') do
+= form_tag(addskill_path, method: 'get', class: 'form-class', remote: true) do
   .form-group
     = text_field_tag :skill,"" , class: "form-control"
     = submit_tag "Add skill", class: "btn btn-default"
