--- a/app/views/profiles/edit.html.haml
+++ b/app/views/profiles/edit.html.haml
@@ -1,7 +1,3 @@
-%h1 Editing profile
-
-= render 'edit_form'
-
-= link_to 'Show', @profile
-\|
-= link_to 'Back', profiles_path
+.authform
+  %h2 Editing profile
+  = render 'edit_form'
