--- a/app/views/profiles/index.html.haml
+++ b/app/views/profiles/index.html.haml
@@ -3,10 +3,6 @@
 
 %h1 Listing profiles
 
-#msg
-
-= render 'add_skill_form'
-
 %table
   %thead
     %tr
@@ -17,7 +13,7 @@
   %tbody
     - @profiles.each do |profile|
       %tr
-        %td= link_to 'Show', profile
+        %td= link_to 'Show', show_profile_path(profile.username)
 %br
 
 = link_to 'New Profile', new_profile_path
