--- a/app/views/profiles/new.html.haml
+++ b/app/views/profiles/new.html.haml
@@ -1,4 +1,3 @@
-.col-md-6
-  %h3 Sign Up
-  = render 'new_form'
-  = link_to 'Back', profiles_path
+.authform
+    %h3 Sign Up
+    = render 'new_form'
