--- a/app/views/profiles/_edit_form.html.haml
+++ b/app/views/profiles/_edit_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for(@profile, :validate => true) do |f|
+= simple_form_for(@profile, html: { multipart: true }) do |f|
   = f.error_notification
 
   .form-inputs
