--- a/app/views/profiles/_edit_form.html.haml
+++ b/app/views/profiles/_edit_form.html.haml
@@ -4,8 +4,9 @@
   .form-inputs
     = f.input :username, required: true
     = f.input :name, required: true, autofocus: true
+    = f.input :title_id, collection: Title.all,value_method: :id , label_method: :name, label: "Title", include_blank: false
     = f.input :phone, required: true
-    = f.input :age, required: true
+    = f.input :age, required: true, label: "Year of birth"
     - if @profile.avatar?
       = image_tag(@profile.avatar.url(:small), id: "edit-profile-avatar")
       %em Currently uploaded avatar
@@ -14,3 +15,5 @@
     = f.input :gender, label: 'What is your gender?', collection: [ ['Male', true ], ['Female', false] ], as: :radio_buttons
   .form-actions
     = f.button :submit, class: "btn btn-default btn-lg btn-block"
+
+
