--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,8 +3,11 @@
   %head
     %title= "#{content_for?(:title) ? yield(:title) : 'Rails Devise'} - GEEKHUB.IO" 
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
+    %script{:src => "//maps.google.com/maps/api/js?v=3.13&sensor=false&libraries=geometry", :type => "text/javascript"}
+    %script{:src => "//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js", :type => "text/javascript"}
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
+
   %body
     %header
       = render 'layouts/navigation'
