--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -20,24 +20,5 @@
       = link_to "Edit", profile_edit_path, class: "btn btn-default"
 
 .row
-  %div{:style => "width: 800px;"}
-    #map{:style => "width: 800px; height: 400px;"}
+  #profile-map
 
-:javascript
-  handler = Gmaps.build('Google');
-  handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
-  markers = handler.addMarkers([
-  {
-    "lat":0,
-    "lng":0,
-    "picture": {
-    "url": "https://addons.cdn.mozilla.net/img/uploads/addon_icons/13/13028-64.png",
-    "width":  36,
-    "height": 36
-  },
-    "infowindow": "hello!"
-  }
-  ]);
-    handler.bounds.extendWith(markers);
-    handler.fitMapToBounds();
-  });
