--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -37,3 +37,17 @@
   border-radius: 5px;
   @include box-shadow;
 }
+
+
+#profile-map {
+  width: 100%;
+  height: 600px;
+
+  .leaflet-google-layer {
+    z-index: 0;
+  }
+
+  .leaflet-map-pane {
+    z-index: 100;
+  }
+}
