--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,9 +2,11 @@
 %html{"ng-app" => "app"}
   %head
     %title= "#{content_for?(:title) ? yield(:title) : 'Rails Devise'} - GEEKHUB.IO" 
+    = include_gon
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
-    %script{:src => "//maps.google.com/maps/api/js?v=3.13&sensor=false&libraries=geometry", :type => "text/javascript"}
-    %script{:src => "//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js", :type => "text/javascript"}
+    %link{:href => "http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css", :rel => "stylesheet"}
+    %script{:src => "http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"}
+    %script{:src => "https://maps.googleapis.com/maps/api/js", :type => "text/javascript"}
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
 
