--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,9 +10,6 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *= require jquery-ui
- *= depend_on_asset "layers.png"
- *= depend_on_asset "layers-2x.png"
- *= require leaflet
  *= require_tree .
  *= require_self
  */
@@ -22,7 +19,7 @@
 @import "mixins";
 
 body {
-  background: rgb(235, 238, 243);
+  background: #EDF0F5; //rgb(235, 238, 243);
 }
 
 ul.ui-autocomplete {
