--- a/app/views/layouts/_autocomplete.html.haml
+++ b/app/views/layouts/_autocomplete.html.haml
@@ -1,13 +1,5 @@
+
 :javascript
-  jQuery(function() {
-    var completer;
-
-      completer = new GmapsCompleter({
-            inputField: '#gmaps-input-address',
-                    errorField: '#gmaps-error'
-          });
-
-        completer.autoCompleteInit({
-              country: "us"
-            });
+  $(function(){
+    $("#geocomplete").geocomplete();
   });
