--- a/app/views/profiles/_edit_form.html.haml
+++ b/app/views/profiles/_edit_form.html.haml
@@ -1,4 +1,3 @@
-= render 'layouts/autocomplete'
 = simple_form_for(@profile, html: { multipart: true }) do |f|
   = f.error_notification
 
@@ -12,11 +11,13 @@
       = image_tag(@profile.avatar.url(:small), id: "edit-profile-avatar")
       %em Currently uploaded avatar
     = f.input :avatar
-    = f.input :address, :input_html =>{:id => 'gmaps-input-address'}, :placeholder => 'Start typing a place...'
+    = f.input :address, :input_html =>{:id => 'geocomplete'}, :placeholder => 'Start typing a place...'
     = f.input :bio
     = f.input :university_name, :url => autocomplete_university_name_profiles_path, :as => :autocomplete, input_html: { class: "form-control" }
     = f.input :gender, label: 'What is your gender?', collection: [ ['Male', true ], ['Female', false] ], as: :radio_buttons
   .form-actions
     = f.button :submit, class: "btn btn-default btn-lg btn-block"
+
+= render 'layouts/autocomplete'
 
 
