--- a/app/views/profiles/_new_form.html.haml
+++ b/app/views/profiles/_new_form.html.haml
@@ -20,6 +20,7 @@
   .form-actions
     = f.button :submit,"Sign Up", class: "btn btn-success btn-lg btn-block"
 
+%div.map_canvas
 = render 'layouts/autocomplete'
 
 
