--- a/app/views/profiles/_edit_form.html.haml
+++ b/app/views/profiles/_edit_form.html.haml
@@ -12,12 +12,14 @@
       %em Currently uploaded avatar
     = f.input :avatar
     = f.input :address, :input_html =>{:id => 'geocomplete'}, :placeholder => 'Start typing a place...'
-    = f.input :bio
+    = f.input :latitude, :as => :hidden, :input_html =>{:id => 'lat'}
+    = f.input :longitude, :as => :hidden, :input_html =>{:id => 'lng'}
     = f.input :university_name, :url => autocomplete_university_name_profiles_path, :as => :autocomplete, input_html: { class: "form-control" }
     = f.input :gender, label: 'What is your gender?', collection: [ ['Male', true ], ['Female', false] ], as: :radio_buttons
   .form-actions
     = f.button :submit, class: "btn btn-default btn-lg btn-block"
 
+%div.map_canvas
 = render 'layouts/autocomplete'
 
 
