--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -26,12 +26,21 @@
   var mapOptions = {
   zoom: 16,
   center: new google.maps.LatLng(parseFloat(gon.lat), parseFloat(gon.log)),
+
   styles: [{"featureType":"landscape","stylers":[{"saturation":-100},{"lightness":65},{"visibility":"on"}]},{"featureType":"poi","stylers":[{"saturation":-100},{"lightness":51},{"visibility":"simplified"}]},{"featureType":"road.highway","stylers":[{"saturation":-100},{"visibility":"simplified"}]},{"featureType":"road.arterial","stylers":[{"saturation":-100},{"lightness":30},{"visibility":"on"}]},{"featureType":"road.local","stylers":[{"saturation":-100},{"lightness":40},{"visibility":"on"}]},{"featureType":"transit","stylers":[{"saturation":-100},{"visibility":"simplified"}]},{"featureType":"administrative.province","stylers":[{"visibility":"off"}]},{"featureType":"water","elementType":"labels","stylers":[{"visibility":"on"},{"lightness":-25},{"saturation":-100}]},{"featureType":"water","elementType":"geometry","stylers":[{"hue":"#ffff00"},{"lightness":-25},{"saturation":-97}]}]
   };
+  
   var mapElement = document.getElementById('profile-map');
   var map = new google.maps.Map(mapElement, mapOptions);
+  var infowindow = new google.maps.InfoWindow({
+      content: "name"
+  });
   var marker = new google.maps.Marker({
     position: new google.maps.LatLng(parseFloat(gon.lat), parseFloat(gon.log)),
     map: map,
-    title: 'Snazzy!'
+    icon: "/images/geek_marker.png",
+    title: gon.profile_name
+  });
+  google.maps.event.addListener(marker, 'click', function() {
+    infowindow.open(map,marker);
   });
