1-edit the map 2-edit search 3-add company account 4-add selectize 5-edit the database

--- a/app/views/layouts/_autocomplete.html.haml
+++ b/app/views/layouts/_autocomplete.html.haml
@@ -1,6 +1,6 @@
 / $("#geocomplete").geocomplete("find", latLng.toString());
 :javascript
-  $("#geocomplete").geocomplete({
+  $("#profile_address").geocomplete({
     map: ".map_canvas",
     details: "form",
     markerOptions: {
@@ -8,17 +8,17 @@
     }
   });
   
-  $("#geocomplete").bind("geocode:dragged", function(event, latLng){
+  $("#profile_address").bind("geocode:dragged", function(event, latLng){
     $("#lat").val(latLng.lat());
     $("#lng").val(latLng.lng());
   });
   
   $("#reset").click(function(){
-    $("#geocomplete").geocomplete("resetMarker");
+    $("#profile_address").geocomplete("resetMarker");
     $("#reset").hide();
     return false;
   });
   
   $("#find").click(function(){
-    $("#geocomplete").trigger("geocode");
+    $("#profile_address").trigger("geocode");
   }).click();
