--- a/app/views/profiles/_new_form.html.haml
+++ b/app/views/profiles/_new_form.html.haml
@@ -4,19 +4,20 @@
   .form-inputs
     = f.input :username, required: true, uniqueness: true
     = f.input :name, required: true, autofocus: true
-    = f.input :title_id, collection: Title.all,value_method: :id , label_method: :name, label: "Title", include_blank: false
-    = f.input :phone, required: true, uniqueness: true
-    = f.simple_fields_for :user, validate: true do |o|
+    / = f.input :title, collection: ["one", "two"], placeholder: 'Select or type your title...'
+    = f.input :phone, hint: 'Private', required: true, uniqueness: true
+
+    = f.simple_fields_for :user, validate: true, required: true do |o|
       = o.input :email, required: true, uniqueness: true
       = o.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @validatable)
       = o.input :password_confirmation, required: true
 
-    = f.input :age, required: true, label: "Year of birth"
-    = f.input :avatar
-    = f.input :address, input_html: {id: 'geocomplete'}, placeholder: 'Start typing a place...'
-    = f.input :university_name, url: autocomplete_university_name_profiles_path, as: :autocomplete, input_html: { class: "form-control" }
-    = f.input :bio
-    = f.input :gender, label: 'What is your gender?', collection: [ ['Male', true ], ['Female', false] ], as: :radio_buttons, :checked => true, required: true
+    = f.input :age, required: true, label: "Year of birth", placeholder: "1990"
+    / = f.input :avatar
+    = f.input :address, placeholder: 'New Cairo City, Cairo, Egypt'
+    / = f.input :university_name, url: autocomplete_university_name_profiles_path, as: :autocomplete, input_html: { class: "form-control" }
+    / = f.input :bio
+    / = f.input :gender, label: 'What is your gender?', collection: [ ['Male', true ], ['Female', false] ], as: :radio_buttons, :checked => true, required: true
   .form-actions
     = f.button :submit,"Sign Up", class: "btn btn-success btn-lg btn-block"
 
@@ -24,3 +25,9 @@
 = render 'layouts/autocomplete'
 
 
+:javascript
+  $('#profile_title').selectize({
+    create: true,
+    hideSelected: true,
+    sortField: 'text'
+  });
