--- a/app/views/profiles/index.html.haml
+++ b/app/views/profiles/index.html.haml
@@ -3,19 +3,8 @@
 - content_for :title do
   Listing profiles
 
-%h1 Listing profiles
-
-%table
-  %thead
-    %tr
-      %th
-      %th
-      %th
-
-  %tbody
-    - @profiles.each do |profile|
-      %tr
-        %td= link_to 'Show', show_profile_path(profile.username)
-%br
-
+- @profiles.each do |profile|
+  = profile.name
+  %br/
+= paginate @profiles
 = link_to 'New Profile', new_profile_path
