--- a/app/views/search/index.html.haml
+++ b/app/views/search/index.html.haml
@@ -2,12 +2,16 @@
   #search-map
 .span5.offset7
   = render 'layouts/messages'
-  %div= render(@search)
+  = render partial: "profile_search", collection: @search, as: :item
+  = paginate @search
+  #more
 
 :javascript
+  var obj = #{@search.to_json};
+  console.log(obj);
   var mapOptions = {
   zoom: 5,
-  center: new google.maps.LatLng(30,21),
+  center: new google.maps.LatLng("30",21),
   styles: [{"featureType":"water","stylers":[{"visibility":"on"},{"color":"#b5cbe4"}]},{"featureType":"landscape","stylers":[{"color":"#efefef"}]},{"featureType":"road.highway","elementType":"geometry","stylers":[{"color":"#83a5b0"}]},{"featureType":"road.arterial","elementType":"geometry","stylers":[{"color":"#bdcdd3"}]},{"featureType":"road.local","elementType":"geometry","stylers":[{"color":"#ffffff"}]},{"featureType":"poi.park","elementType":"geometry","stylers":[{"color":"#e3eed3"}]},{"featureType":"administrative","stylers":[{"visibility":"on"},{"lightness":33}]},{"featureType":"road"},{"featureType":"poi.park","elementType":"labels","stylers":[{"visibility":"on"},{"lightness":20}]},{},{"featureType":"road","stylers":[{"lightness":20}]}]
   };
 
