--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -27,26 +27,68 @@
   }
 }
 
-.profile_image {
-  height:300px;
-  width:300px;
+.profile_img {
+  height:200px;
+  width:200px;
   float:left;
-  min-height: 300px;
-  max-height: 300px;
-  max-width: 100%;
   border-radius: 5px;
   @include box-shadow;
 }
 
 
+
+.profile-head{
+  position: relative;
+  top: -80px;
+  .profile-image-box{
+    margin-left: 30px;
+    margin-top: -175px;
+    position: relative;
+    z-index: 1;
+  }
+  .profile-name{
+    color: #396388;
+    font-weight: bold;
+    margin-left: 240px;
+    text-shadow: #fff 0.0em 0.0em 0.9em;
+  }
+  .navbar{
+    max-height: 20px;
+  }
+  .navbar-header{
+    margin-left: 200px;
+  }
+  .bar{
+    position: relative;
+    margin-top: -6px;
+    height: 60px;
+    width: 100%;
+    background-color: white;
+  }
+  ul{
+    text-align:center;
+    height: 100%;
+    padding-left: 0px;
+    font-size: 1em;
+    list-style-type: none;
+    li{
+      height: 100%;
+      display: inline-block;
+      width: auto;
+      a{
+        p{
+          font-weight: bold;
+        }
+      }
+    }
+  }
+}
+
+.cover-img{
+  min-width: 100%;
+}
 #profile-map {
   width: 100%;
-  height: 400px;
-  // .leaflet-google-layer {
-  //   z-index: 0;
-  // }
+  height: 350px;
 
-  // .leaflet-map-pane {
-  //   z-index: 100;
-  // }
 }
