--- a/app/views/profiles/_edit_form.html.haml
+++ b/app/views/profiles/_edit_form.html.haml
@@ -3,8 +3,9 @@
 
   .form-inputs
     = f.input :username, required: true
-    = f.input :name, required: true, autofocus: true
-    = f.input :title_id, collection: Title.all,value_method: :id , label_method: :name, label: "Title", include_blank: false
+    = f.input :first_name, required: true
+    = f.input :last_name
+    = f.input :title, collection: ["one", "two"], placeholder: 'Select or type your title...'
     = f.input :phone, required: true
     = f.input :age, required: true, label: "Year of birth"
     - if @profile.avatar?
