--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -1,25 +1,82 @@
 .row
-  .col-md-3.col-sm-5
-    .image_wrapper
-      = image_tag @profile.avatar.url(:medium), class: "profile_image"
-  .col-md-9.col-sm-7
-    #profile_info
-      %h1= @profile.name
-      %p.description= @profile.bio
-      %p
-        = @profile.user.email
-%br/
-.row
-  .col-md-3
-    = render 'add_skill_form'
-%br/
-.row
-  .col-md-12
-    = link_to "Back", root_path, class: "btn btn-default"
-    - if @current_user
-      = link_to "Edit", profile_edit_path, class: "btn btn-default"
-
-.row
   #profile-map
+  .profile-head
+    %h2.profile-name= @profile.name.capitalize
+    .bar
+      %ul.nav
+        %li#about
+          %a{:href => "#"}
+            %span PAIRED WITH
+            %br/
+            %p 22
+        %li#pair
+          %a{:href => "#"}
+            %span PAIRED WITH
+            %br/
+            %p 13
+        %li 
+          %a{:href => "#"}
+            %span PAIRED WITH
+            %br/
+            %p 104
+        %li 
+          %a{:href => "#"}
+            %span PAIRED WITH
+            %br/
+            %p 5            
+    .profile-image-box
+      .image_wrapper
+        = image_tag @profile.avatar.url(:medium), class: "profile_img"
+  .authform
+    #pro
+      = render 'about'
 
 :javascript
+
+  $( "#about" ).click(function() {
+    $(document).find('#in').remove();
+    $('#pro').prepend('#{j render "about", :object => @profile}');
+    $("html, body").animate({ scrollTop: 160 });
+  });
+
+  $( "#pair" ).click(function() {
+    $(document).find('#in').remove();
+    $('#pro').prepend('#{j render "pair", :object => @profile}');
+    $("html, body").animate({ scrollTop: 160 });
+  });
+  (function(window, google, mapster) {
+
+    var options = mapster.profile_map,
+    element = document.getElementById("profile-map"),
+    map = new google.maps.Map(element, options);
+    
+    var marker = new google.maps.Marker({
+      position: new google.maps.LatLng(37.791350,-122.435883),
+      map: map,
+      icon: '/images/geek_marker.png',
+      title: "#{@profile.name}"
+    });
+  }(window, google, window.Mapster || (window.Mapster = {})));
+
+/ .row
+/   .col-md-3.col-sm-5
+/     .image_wrapper
+/       = image_tag @profile.avatar.url(:medium), class: "profile_image"
+/   .col-md-9.col-sm-7
+/     #profile_info
+/       %h1= @profile.name
+/       %p.description= @profile.bio
+/       %p
+/         = @profile.user.email
+/ %br/
+/ .row
+/   .col-md-3
+/     = render 'add_skill_form'
+/ %br/
+/ .row
+/   .col-md-12
+/     = link_to "Back", root_path, class: "btn btn-default"
+/     - if @current_user
+/       = link_to "Edit", profile_edit_path, class: "btn btn-default"
+
+
