--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -1,6 +1,8 @@
 // Place all the styles related to the profiles controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+@import "bootstrap-sprockets";
+@import "bootstrap";
 @import "variables";
 @import "mixins";
 
@@ -90,5 +92,26 @@
 #profile-map {
   width: 100%;
   height: 350px;
+}
 
+#profile-top{
+  @extend .row;
+  height: 420px;
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+
+#profile-content{
+  // margin-top: 130px;
+  // margin-left: 20px;
+}
+#about{
+  margin-left: 20px;
+}
+
+#profile-main{
+  @extend .row;
+  margin-left: -30px;
+  margin-top: 10;
+  padding-top: 0;
 }
