--- a/app/views/profiles/_about.html.haml
+++ b/app/views/profiles/_about.html.haml
@@ -1,39 +1,12 @@
 #in
-  %br/
-  %br/
-  %br/
-  %br/
-  %h1= @profile.name.capitalize
-  %h1 adham
-  %h1 adham
-  %h1 adham
-  %h1 adham
-  %h1 adham
-  %h1 adham
-  %br/
-  %h1 adham
-  %h1 adham
-  %h1 adham
-  %h1 adham
-  %h1 adham
-  %h1 adham
-  %br/
-  %h1 adham
-  %h1 adham
-  %h1 adham
-  %h1 adham
-  %h1 adham
-  %h1 adham
-  %br/
-  %h1 adham
-  %h1 adham
-  %h1 adham
-  %h1 adham
-  %h1 adham
-  %h1 adham
-  %br/
-  %h1 adham
-  %h1 adham
-  %h1 adham
-  %h1 adham
-  %h1 adham
+  %h3 About
+  %hr
+  %b Email:
+  %p= @profile.user.email
+  %br
+  %b Bio:
+  %p= @profile.bio
+  %br
+  %b Address:
+  %p= @profile.address
+  %br
