--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -1,7 +1,8 @@
 // Place all the styles related to the search controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
+@import "bootstrap-sprockets";
+@import "bootstrap";
 
 #search-map {
   width: 100%;
@@ -16,11 +17,60 @@
 }
 
 .side-map {
+  @extend .col-md-6;
+  @extend .col-md-offset-6;
+  padding: 0;
   position: fixed;
-  bottom: 40px;
-  top: 53px;
-  right: 0;
+  // bottom: 40px;
+  // top: 53px;
+  // right: 0;
   height: 100%;
   background-color: white;
   width: 50%;
+}
+
+
+#search-controls{
+  margin-top: 7.5px;
+}
+
+.search-items{
+  @extend .col-md-6;
+  // margin-top: 20px;
+  margin-bottom: 0;
+  list-style-type: none;
+  padding: 0;
+
+  li{
+    // margin-bottom: -20px;
+    background-color: #fff;
+    height: 100%;
+    width: 100%;
+    margin: 0px;
+    float: left;
+    margin-left: 5px;
+    margin-right: 5px;
+    // a {
+    //   display: block;
+    //   top: 0;
+    //   left: 0;
+    //   width: 100%;
+    //   height: 100%;
+    //   cursor: default;
+    // }
+  }
+  .has-hover:hover { 
+    background-color: #F4F9FC;
+  }
+  .active{
+    background-color: #E6EBF6;
+  }
+}
+
+
+.search-filter{
+  background-color: #d4d4d4;
+  height: 100px;
+  widows: 100%;
+  padding-bottom: 5px;
 }
