--- a/app/views/search/_profile_search.html.haml
+++ b/app/views/search/_profile_search.html.haml
@@ -1,2 +1,4 @@
-= link_to profile.name, show_profile_path(profile.username)
-%br/
+%li.has-hover{id: "#{profile.id}"}
+  = link_to profile.name, show_profile_path(profile.username)
+  = image_tag profile.avatar.url(:medium), class: "profile_img"
+
