--- a/app/views/layouts/_navigation_links.html.haml
+++ b/app/views/layouts/_navigation_links.html.haml
@@ -5,7 +5,7 @@
       %span.caret
     %ul.dropdown-menu{:role => "menu"}
       %li= link_to 'Edit account', edit_user_registration_path
-      %li= link_to 'Edit profile', profile_edit_path
+      %li= link_to 'Edit profile', edit_profiles_path
       %li= link_to 'Sign out', destroy_user_session_path, :method=>'get'
   - else
     %li= link_to 'Sign in', new_user_session_path
